<resources>
    <string name="food">Food</string>
    <string name="rs_4_200">Rs. 4,200</string>
    <string name="your_money_your_rules_nlet_s_start_building_the_future_you_deserve">Your Money , Your Rules\nLet\'s Start Building The Future You Deserve</string>
    <string name="get_started">Get Started</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="welcome_to_spend_wise">Welcome to Spend Wise</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="onboarding_illustration">Onboarding illustration</string>
    <string name="track_your_expenses">Track Your Expenses</string>
    <string name="observe_ongoing_and_tract_it_best_categories">Observe ongoing and tract it best categories.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="profile_picture2">Profile Picture</string>
    <string name="create_account">Create Account</string>
    <string name="username2">Username</string>
    <string name="email">Email</string>
    <string name="password2">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="app_logo">app_logo</string>
    <string name="spend_wise">Spend Wise</string>
    <string name="spend_wise_live_smarter">Spend Wise Live Smarter</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="description_optional">Description (optional)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email2">Email</string>
    <string name="cancel2">Cancel</string>
    <string name="save2">Save</string>
    <string name="your_financial_snapshot">Your Financial Snapshot</string>
    <string name="april_2025">April 2025</string>
    <string name="total_spent">💸 Total Spent</string>
    <string name="rs_15_400">Rs. 15,400</string>
    <string name="total_earned">💰 Total Earned</string>
    <string name="rs_25_000">Rs. 25,000</string>
    <string name="savings">💼 Savings</string>
    <string name="rs_9_600">Rs. 9,600</string>
    <string name="budget_left">📊 Budget Left</string>
    <string name="rs_9_600a">Rs. 9,600</string>
    <string name="spending_breakdown">Spending Breakdown</string>
    <string name="weekly_comparison">Weekly Comparison</string>
    <string name="smart_insights">Smart Insights</string>
    <string name="you_earned_rs_9_600_more_than_you_spent_nice">You earned Rs. 9,600 more than you spent. Nice!</string>
    <string name="food_is_your_top_spending_category_this_month">Food is your top spending category this month.</string>
    <string name="categories_breakdown">Categories Breakdown</string>
    <string name="budget_overview">Budget Overview</string>
    <string name="april_2025y">April 2025</string>
    <string name="set_your_monthly_budget">Set Your Monthly Budget</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="save_budget">Save Budget</string>
    <string name="budget_usage">Budget Usage</string>
    <string name="_65">65%</string>
    <string name="you_ve_used_65_of_your_budget">You\'ve used 65% of your budget</string>
    <string name="budget_breakdown">Budget Breakdown</string>
    <string name="monthly_budget">Monthly Budget:</string>
    <string name="rs_30_000_00">Rs. 30,000.00</string>
    <string name="total_expenses">Total Expenses:</string>
    <string name="rs_19_500_00">Rs. 19,500.00</string>
    <string name="remaining_budget">Remaining Budget:</string>
    <string name="rs_10_500_00">Rs. 10,500.00</string>
    <string name="great_job_you_re_spending_wisely">Great job! You\'re spending wisely.</string>
    <string name="good_morning_lakshan">Good morning, Lakshan 👋</string>
    <string name="april_13_2025">April 13, 2025</string>
    <string name="budget_summary">Budget Summary</string>
    <string name="total_budget_this_month">Total Budget This Month</string>
    <string name="_2_500_00">$2,500.00</string>
    <string name="total_expenses2">Total Expenses</string>
    <string name="_1_235_50">$1,235.50</string>
    <string name="remaining_budget2">Remaining Budget</string>
    <string name="_1_264_50">$1,264.50</string>
    <string name="you_ve_used_49_of_your_budget">You\'ve used 49% of your budget</string>
    <string name="add_income">➕ Add Income</string>
    <string name="add_expense">➖ Add Expense</string>
    <string name="you_re_doing_great_only_49_of_your_budget_used">You\'re doing great! Only 49% of your budget used.</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View All</string>
    <string name="profile_picture3">Profile Picture</string>
    <string name="edit_profile2">Edit Profile</string>
    <string name="no_transactions_yet">No Transactions Yet</string>
    <string name="all_transactions">All Transactions</string>
    <string name="add_your_first_transaction_using_the_button_below">Add your first transaction using the button below</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="food2">Food</string>
    <string name="rs_4_200a">Rs. 4,200</string>
    <string name="grocery_shopping">Grocery Shopping</string>
    <string name="food3">Food</string>
    <string name="app_name">SpendWise</string>
    <string name="apr_10_2025">Apr 10, 2025</string>
    <string name="rs_1_200">-Rs. 1,200</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="delete_transaction">Delete transaction</string>
</resources>