<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    android:background="@drawable/login_gradient_background"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <RadioGroup
                android:id="@+id/rg_transaction_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/rb_income"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background3"
                    android:text="@string/income"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background2"
                    android:text="@string/expense"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <EditText
                android:id="@+id/et_transaction_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/title"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp"
                android:background="@drawable/edittext_background"
                android:inputType="numberDecimal"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_optional"
                android:padding="12dp"
                android:textColor="#707070"
                android:textSize="18sp"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancel"
                    android:textColor="@color/expense_red"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:text="@string/save"
                    android:backgroundTint="#4CAF50"/>
            </LinearLayout>
        </LinearLayout>